--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 
 @layer base {
   html {
+    scroll-behavior: smooth;
     -webkit-overflow-scrolling: touch;
     background-color: #FFFFFF;
     height: 100%;
